--- a/Dark+.theme.css
+++ b/Dark+.theme.css
@@ -16,8 +16,8 @@
 :root {
   --darkplus-bg: #212121;
   --darkplus-bg2: #302f2f;
-  --darkplus-sec: #bb86fc;
-  --darkplus-links: #cdaef3;
+  --darkplus-sec: #F0F0F0;
+  --darkplus-links: #F5F5F5;
   --darkplus-home-icon: url(https://devevil.com/betterdiscord/dark%2b-logo.png);
  --watermark-filter-invert: 0%;
   --watermark-filter-sepia: 50%;
