--- a/Dark+.theme.css
+++ b/Dark+.theme.css
@@ -11,7 +11,7 @@
   * @invite jsQ9UP7kCA
 */
 
-@import url('https://devevil99.github.io/devevil/BetterDiscordAddons/Theme/Dark+/Dark+.theme.css');
+@import url('https://raw.githubusercontent.com/Tioncheat/DarkPlus-Discord-Theme/refs/heads/main/css');
 
 :root {
   --darkplus-bg: #212121;
