--- a/Dark+.theme.css
+++ b/Dark+.theme.css
@@ -18,11 +18,5 @@
   --darkplus-bg2: #302f2f;
   --darkplus-sec: #F0F0F0;
   --darkplus-links: #F5F5F5;
-  --darkplus-home-icon: url(https://postimg.cc/k2PQQZ3f);
- --watermark-filter-invert: 0%;
-  --watermark-filter-sepia: 50%;
-  --watermark-filter-saturate: 3000%;
-  --watermark-filter-hue-rotate: 210deg;
-  --watermark-filter-brightness: 70%;
-  --watermark-filter-contrast: 200%;
+  --darkplus-home-icon: url(https://i.postimg.cc/sgvTrdnd/pfp.png);
 }
