--- a/Dark+.theme.css
+++ b/Dark+.theme.css
@@ -17,6 +17,6 @@
   --darkplus-bg: #212121;
   --darkplus-bg2: #302f2f;
   --darkplus-sec: #f2021a;
-  --darkplus-links: #02f23e;
+  --darkplus-links: #F5F5F5;
   --darkplus-home-icon: url(https://i.postimg.cc/sgvTrdnd/pfp.png);
 }
