--- a/Dark+.theme.css
+++ b/Dark+.theme.css
@@ -16,7 +16,7 @@
 :root {
   --darkplus-bg: #212121;
   --darkplus-bg2: #302f2f;
-  --darkplus-sec: #f2021a;
+  --darkplus-sec: #2a2a2a;
   --darkplus-links: #F5F5F5;
   --darkplus-home-icon: url(https://i.postimg.cc/sgvTrdnd/pfp.png);
 }
